force-app/main/default/objects/BoB_Coverage__c/BoB_Coverage__c.object-meta.xml
<CustomObject>
    <description>Object used to manage both Primary or Local Book of Business Coverage</description>
    <label>M2 BoB Coverage</label>
    <nameField>
        <label>BoB Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>M2 BoB Coverage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>