force-app/main/default/objects/BoB_Coverage__c/fields/Country_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Country_Coverage__c</fullName>
    <description>used to indicate country specific billings a sales rep receives credit for</description>
    <label>Country Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
                <default>true</default>
                <label>North America</label>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>