force-app/main/default/objects/BoB_Coverage__c/fields/Country_Coverage_Copy__c.field-meta.xml
<CustomField>
    <fullName>Country_Coverage_Copy__c</fullName>
    <formula>IF ( ISPICKVAL(Country_Coverage__c, &quot;United States&quot;), &quot;United States&quot;, 
IF ( ISPICKVAL(Country_Coverage__c, &quot;Canada&quot;), &quot;Canada&quot;, 
IF ( ISPICKVAL(Country_Coverage__c, &quot;North America&quot;), &quot;United States, Canada&quot;, NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Coverage</label>
    <type>Text</type>
</CustomField>