force-app/main/default/objects/BoB_Coverage__c/fields/CY_YTD_Amount__c.field-meta.xml
<CustomField>
    <fullName>CY_YTD_Amount__c</fullName>
    <formula>/*CY_Jan__c  +  CY_Feb__c  +  CY_Mar__c  +  CY_Apr__c +  CY_May__c +  CY_Jun__c  + CY_Jul__c +  CY_Aug__c + CY_Sep__c +  CY_Oct__c +  CY_Nov__c +  CY_Dec__c*/ null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY YTD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>