force-app/main/default/objects/BoB_Coverage__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <description>Displays the Sales Rep Director at the time of coverage</description>
    <inlineHelpText>Director at time of coverage</inlineHelpText>
    <label>Director</label>
    <length>99</length>
    <type>Text</type>
</CustomField>