force-app/main/default/objects/BoB_Coverage__c/fields/Effective_End_Period__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Period__c</fullName>
    <inlineHelpText>Represents the end period in months the BoB Coverage record will apply Billings to for Book reporting</inlineHelpText>
    <label>Effective End Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
                <default>true</default>
                <label>12</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>