force-app/main/default/objects/BoB_Coverage__c/fields/Effective_Year__c.field-meta.xml
<CustomField>
    <fullName>Effective_Year__c</fullName>
    <label>Effective Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
                <default>true</default>
                <label>2017</label>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>