force-app/main/default/objects/BoB_Coverage__c/fields/M2_Growth_Target__c.field-meta.xml
<CustomField>
    <fullName>M2_Growth_Target__c</fullName>
    <label>M2 Growth Target</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>