force-app/main/default/objects/BoB_Coverage__c/fields/M2_Quota_Aug__c.field-meta.xml
<CustomField>
    <fullName>M2_Quota_Aug__c</fullName>
    <formula>IF(AND( 

8 &gt;= YTD_Quota_Start_Period__c, 8 &lt;= YTD_Quota_End_Period__c ), 

PY_Monthly_Average_M2_Quota__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>M2 Quota Aug</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>