force-app/main/default/objects/BoB_Coverage__c/fields/M2_YTD_Quota_Summary__c.field-meta.xml
<CustomField>
    <fullName>M2_YTD_Quota_Summary__c</fullName>
    <formula>Num_Of_Quota_Periods__c *  PY_Monthly_Average_M2_Quota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>M2 YTD Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>