force-app/main/default/objects/BoB_Coverage__c/fields/Monthly_PY_Avg__c.field-meta.xml
<CustomField>
    <fullName>Monthly_PY_Avg__c</fullName>
    <formula>PY_BoB_Total__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly PY Avg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>