force-app/main/default/objects/BoB_Coverage__c/fields/Num_Of_Quota_Periods__c.field-meta.xml
<CustomField>
    <fullName>Num_Of_Quota_Periods__c</fullName>
    <formula>IF(

 YTD_Quota_End_Period__c &gt;= YTD_Quota_Start_Period__c, (YTD_Quota_End_Period__c - YTD_Quota_Start_Period__c + 1), 0

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Of Quota Periods</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>