force-app/main/default/objects/BoB_Coverage__c/fields/Parent_Billing_Market__c.field-meta.xml
<CustomField>
    <fullName>Parent_Billing_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Parent Billing Market object</description>
    <label>Parent Billing Market</label>
    <referenceTo>Parent_Billing_Market__c</referenceTo>
    <relationshipName>BoB_Coverage</relationshipName>
    <type>Lookup</type>
</CustomField>