force-app/main/default/objects/BoB_Coverage__c/fields/Product_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Product_Coverage__c</fullName>
    <description>used to indicate specific service line billings a sales rep receives credit for</description>
    <label>Product Coverage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Document Management Solutions</fullName>
            </value>
            <value>
                <fullName>Entertainment Services</fullName>
            </value>
            <value>
                <fullName>Intellectual Property Management</fullName>
            </value>
            <value>
                <fullName>Records Management</fullName>
            </value>
            <value>
                <fullName>Secure Shredding</fullName>
            </value>
            <value>
                <fullName>Data Backup and Recovery</fullName>
            </value>
            <value>
                <fullName>Fulfillment Services</fullName>
            </value>
            <value>
                <fullName>Data protection</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Consulting Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>