force-app/main/default/objects/BoB_Coverage__c/fields/PY_Monthly_Average_M2_Quota__c.field-meta.xml
<CustomField>
    <fullName>PY_Monthly_Average_M2_Quota__c</fullName>
    <description>PY actual amount divided by months</description>
    <formula>PY_BoB_Total__c / 12

* 

(1 + M2_Growth_Target__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PY Monthly Average M2 Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>