force-app/main/default/objects/BoB_Coverage__c/fields/Running_User_BOB__c.field-meta.xml
<CustomField>
    <fullName>Running_User_BOB__c</fullName>
    <formula>if (  $User.Id  =  Sales_Rep_Name__r.Id  , &quot;My BOB Coverage&quot;, &quot;Not&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Running User BOB filter</label>
    <type>Text</type>
</CustomField>