force-app/main/default/objects/BoB_Coverage__c/fields/Sales_Rep_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Employee_Id__c</fullName>
    <formula>Sales_Rep_Name__r.EmployeeNumber</formula>
    <label>Sales Rep Employee Id</label>
    <type>Text</type>
</CustomField>