force-app/main/default/objects/BoB_Coverage__c/fields/Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BoB_Coverage</relationshipName>
    <type>Lookup</type>
</CustomField>