force-app/main/default/objects/BoB_Coverage__c/fields/Sales_Rep_Role__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Role__c</fullName>
    <label>Sales Rep Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Business Development Executive - Hybrid</fullName>
            </value>
            <value>
                <fullName>Business Development Manager</fullName>
            </value>
            <value>
                <fullName>Business Relationship Executive</fullName>
            </value>
            <value>
                <fullName>Business Relationship Manager</fullName>
            </value>
            <value>
                <fullName>Business Relationship Team Leader</fullName>
            </value>
            <value>
                <fullName>Commercial Manager</fullName>
            </value>
            <value>
                <fullName>Corporate Manager</fullName>
            </value>
            <value>
                <fullName>Customer Development Associate</fullName>
            </value>
            <value>
                <fullName>Customer Development Executive</fullName>
            </value>
            <value>
                <fullName>Customer Development Executive (CDE)</fullName>
            </value>
            <value>
                <fullName>Customer Development Executive-Traditional</fullName>
            </value>
            <value>
                <fullName>Customer Development Executive-USA</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Director-BDE</fullName>
            </value>
            <value>
                <fullName>Director-CDE</fullName>
            </value>
            <value>
                <fullName>Director-Channels</fullName>
            </value>
            <value>
                <fullName>Director-Hybrid</fullName>
            </value>
            <value>
                <fullName>Director-SMB</fullName>
            </value>
            <value>
                <fullName>Director-Strategic Alliances</fullName>
            </value>
            <value>
                <fullName>Global Account Manager</fullName>
            </value>
            <value>
                <fullName>Key Account Manager</fullName>
            </value>
            <value>
                <fullName>Manager-SMB</fullName>
            </value>
            <value>
                <fullName>Sales-BDE</fullName>
            </value>
            <value>
                <fullName>Sales-BDE1</fullName>
            </value>
            <value>
                <fullName>Sales-BDE2</fullName>
            </value>
            <value>
                <fullName>Sales-BDE-Hunter</fullName>
            </value>
            <value>
                <fullName>Sales-BDE-Hybrid</fullName>
            </value>
            <value>
                <fullName>Sales-CDE</fullName>
            </value>
            <value>
                <fullName>Sales-CDE-Traditional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>