force-app/main/default/objects/BoB_Coverage__c/fields/YTD_End_Period_Text__c.field-meta.xml
<CustomField>
    <fullName>YTD_End_Period_Text__c</fullName>
    <formula>Text( YTD_Quota_End_Period__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD End Period</label>
    <type>Text</type>
</CustomField>