force-app/main/default/objects/BoB_Coverage__c/fields/YTD_Performance_Percent__c.field-meta.xml
<CustomField>
    <fullName>YTD_Performance_Percent__c</fullName>
    <formula>CY_YTD_Amount__c /   M2_YTD_Quota_Summary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Performance %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>