force-app/main/default/objects/BoB_Coverage__c/fields/YTD_Quota_End_Period__c.field-meta.xml
<CustomField>
    <fullName>YTD_Quota_End_Period__c</fullName>
    <formula>IF( 

VALUE( null) &lt;  VALUE(TEXT(Effective_End_Period__c)) ,  VALUE(null) , VALUE(TEXT(Effective_End_Period__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Quota End Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>