force-app/main/default/objects/BoB_Coverage__c/recordTypes/Country_Parent.recordType-meta.xml
<RecordType>
    <fullName>Country_Parent</fullName>
    <active>true</active>
    <description>Bob Coverage for Country Parent</description>
    <label>Country Parent</label>
</RecordType>