force-app/main/default/objects/BoB_Coverage__c/recordTypes/IMGA.recordType-meta.xml
<RecordType>
    <fullName>IMGA</fullName>
    <active>true</active>
    <label>IMGA</label>
</RecordType>