force-app/main/default/objects/BoB_Coverage__c/listViews/IME_Bob_Coverage.listView-meta.xml
<ListView>
    <fullName>IME_Bob_Coverage</fullName>
    <columns>NAME</columns>
    <division>*</division>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BoB_Coverage__c.Country_Parent</value>
    </filters>
    <label>IME Bob Coverage</label>
    <language>en_US</language>
</ListView>